--- a/index.html
+++ b/index.html
@@ -36,24 +36,22 @@
 <body>
 	
 	<div class="floating-container">
-	<div class="floating-button"><a href="">  <i class="material-icons">phone
-	</i></a>
-	</span></div>
-	<!-- <div class="element-container">
-
-		<a href="google.com"> <span class="float-element tooltip-left">
-		<i class="material-icons">phone
-		</i></a>
-		</span>
-		<span class="float-element">
-		<i class="material-icons">email
-	</i>
-		</span>
-		<span class="float-element">
-		<i class="material-icons">chat</i>
-		</span>
-	</div> -->
-	
+		<div class="floating-button">+</div>
+		<div class="element-container">
+	  
+		  <a href="google.com"> <span class="float-element tooltip-left">
+			<i class="material-icons">phone
+			</i></a>
+		  </span>
+			<span class="float-element">
+			<i class="material-icons">email
+	  </i>
+		  </span>
+			<span class="float-element">
+			<i class="material-icons">chat</i>
+		  </span>
+		</div>
+	  </div>
 	</div>
 
 	<div class="mry-app">
@@ -168,7 +166,7 @@
 												<!-- <div class="mry-subtitle mry-mb-20"></div> -->
 												<h1 class="mry-mb-30 text-color corosuel-header">Cafteria<br><span class="mry-border-text text-color">Planning</span><span class="mry-animation-el"></span></h1>
 												<!-- <div class="mry-text mry-mb-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>Adipisci distinctio iure, rerum non fugit.</div> -->
-												<a class="mry-btn mry-default-link mry-anima-link text-color get-qoute-color" href="project.html">Get Quote</a>
+												<a class="mry-btn mry-default-link mry-anima-link text-color get-qoute-color" href="project.html">Get Qoute</a>
 												<!-- <a class="mry-btn-text mry-default-link mry-anima-link" href="portfolio-grid-1.html">All Projects</a> -->
 											</div>
 										</div>
@@ -194,7 +192,7 @@
 												<!-- <div class="mry-subtitle mry-mb-20">slide 3</div> -->
 												<h1 class="mry-mb-30 text-color corosuel-header">Restro Bars<br><span class="mry-border-text text-color">Country house</span><span class="mry-animation-el"></span></h1>
 												<!-- <div class="mry-text mry-mb-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>Adipisci distinctio iure, rerum non fugit.</div> -->
-												<a class="mry-btn mry-default-link mry-anima-link text-color get-qoute-color" href="project.html">Get Quote</a>
+												<a class="mry-btn mry-default-link mry-anima-link text-color get-qoute-color" href="project.html">Get Qoute</a>
 												<!-- <a class="mry-btn-text mry-default-link mry-anima-link" href="portfolio-grid-1.html">All Projects</a> -->
 											</div>
 										</div>
@@ -302,7 +300,7 @@
 			<div class="mry-numbering mry-fo">
 				<div class="mry-subtitle">Our Works</div>
 			</div>
-			<h3 class="mry-fo">Expert Consulting for the Modern Hospitality Business</h3>
+			<h2 class="mry-fo">Expert Consulting for the Modern Hospitality Business</h2>
 		</div>
 
 	</div>
