new gallery and text changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<i class="material-icons">phone
 			</i></a>
 		  </span>
-			<span class="float-element">
+			<span class="float-element" id = "open-email-popup-btn">
 			<i class="material-icons">email
 	  </i>
 		  </span>
@@ -74,6 +74,7 @@
 			<header class="col-12 navbar navbar-responsive">
 				<div class="container navbar-container d-flex">
 				  <div class="brand js-target-scroll">
+					<span class="brand-logo-image"><img src="img/light/logo1.png" alt=""></span>
 					Cuisinery
 				  </div>
 		  
@@ -137,7 +138,7 @@
 												<div class="mry-main-title corosuel-text" data-swiper-parallax-x="30%" data-swiper-parallax-scale=".7" data-swiper-parallax-opacity="0"
 													data-swiper-parallax-duration="1000">
 													<!-- <div class="mry-subtitle mry-mb-20">RESTAURANT </div> -->
-													<h1 class="mry-mb-30 text-color corosuel-header ">Interior<br><span class="mry-border-text text-color">Design</span><span class="mry-animation-el"></span></h1>
+													<h1 class="mry-mb-30 text-color corosuel-header ">Hotel <br><span class="mry-border-text text-color">Interior</span><span class="mry-animation-el"></span></h1>
 													<!-- <div class="mry-text mry-mb-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>Adipisci distinctio iure, rerum non fugit.</div> -->
 													<a class="mry-btn mry-default-link mry-anima-link text-color get-qoute-color" href="project.html">Get Quote</a>
 												</div>
@@ -369,49 +370,49 @@
 		  </div>
 	  </main>
 	  <ul class="honeycomb" lang="es">
-		<li class="honeycomb-cell">
+		<li class="honeycomb-cell" data-aos="fade-up">
 		  <img class="honeycomb-cell__image" src="img/light/works/cafeteria.jpeg">
 		  <div class="honeycomb-cell__title">Cafeteria Designing</div>
 		</li>
-		<li class="honeycomb-cell">
-		  <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/2">
-		  <div class="honeycomb-cell__title">Impermeables</div>
+		<li class="honeycomb-cell" data-aos="fade-left">
+		  <img class="honeycomb-cell__image" src="img/light/works/restaurants.jpeg">
+		  <div class="honeycomb-cell__title">Restaurant Interiors</div>
 		</li>
-		<li class="honeycomb-cell">
-		  <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3">
-		  <div class="honeycomb-cell__title">Tablero doble cara</div>
+		<li class="honeycomb-cell" data-aos="fade-right">
+		  <img class="honeycomb-cell__image" src="img/light/services/menu-planning.jpg">
+		  <div class="honeycomb-cell__title">Menu Engineering </div>
 		</li>
-		<li class="honeycomb-cell">
-		  <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4">
-		  <div class="honeycomb-cell__title">Maletín de empaque</div>
+		<li class="honeycomb-cell" data-aos="fade-left">
+		  <img class="honeycomb-cell__image" src="img/light/services/restro-bars.jpg">
+		  <div class="honeycomb-cell__title">Resto Bar Consulting</div>
 		</li>
-		<li class="honeycomb-cell">
-		  <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5">
-		  <div class="honeycomb-cell__title">Antireflectivo<small>No vidrio</small></div>
+		<li class="honeycomb-cell" data-aos="fade-up">
+		  <img class="honeycomb-cell__image" src="img/light/services/commercial-kitchen.avif">
+		  <div class="honeycomb-cell__title">Commercial Kitchen<small>Setup</small></div>
 		</li>
-		<li class="honeycomb-cell">
-		  <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
-		  <div class="honeycomb-cell__title">6 fichas<small>1 de repuesto</small></div>
+		<li class="honeycomb-cell" data-aos="fade-up">
+		  <img class="honeycomb-cell__image" src="img/light/services/hospitality.jpg">
+		  <div class="honeycomb-cell__title">Hospitality Concept <small>Creation</small></div>
 		</li>
-		<li class="honeycomb-cell">
-		  <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
-		  <div class="honeycomb-cell__title">Tablero magnético</div>
+		<li class="honeycomb-cell" data-aos="fade-up">
+		  <img class="honeycomb-cell__image" src="img/light/services/food truck.jpg">
+		  <div class="honeycomb-cell__title">Food Truck Consulting</div>
 		</li>
-		<li class="honeycomb-cell">
-			<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4">
-			<div class="honeycomb-cell__title">Maletín de empaque</div>
+		<li class="honeycomb-cell" data-aos="fade-right">
+			<img class="honeycomb-cell__image" src="img/light/services/cloud-kitchen.jpeg">
+			<div class="honeycomb-cell__title">Cloud Kitchen Consulting</div>
 		  </li>
-		  <li class="honeycomb-cell">
-			<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5">
-			<div class="honeycomb-cell__title">Antireflectivo<small>No vidrio</small></div>
+		  <li class="honeycomb-cell" data-aos="fade-left">
+			<img class="honeycomb-cell__image" src="img/light/services/canteen.jpg">
+			<div class="honeycomb-cell__title">Canteen Project Consulting <small>Consulting</small></div>
 		  </li>
-		  <li class="honeycomb-cell">
-			<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
-			<div class="honeycomb-cell__title">6 fichas<small>1 de repuesto</small></div>
+		  <li class="honeycomb-cell" data-aos="fade-right">
+			<img class="honeycomb-cell__image" src="img/light/services/business-ideas.jpg">>
+			<div class="honeycomb-cell__title">Hotel & Restaurant <small>Business Development Ideas</small></div>
 		  </li>
-		  <li class="honeycomb-cell">
-			<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
-			<div class="honeycomb-cell__title">Tablero magnético</div>
+		  <li class="honeycomb-cell" data-aos="fade-left">
+			<img class="honeycomb-cell__image" src="img/light/services/food-court.jpg">
+			<div class="honeycomb-cell__title">Food Court Consulting</div>
 		  </li>
 		<li class="honeycomb-cell honeycomb__placeholder"></li>
 	  </ul>
@@ -686,7 +687,7 @@
 	<div class="mry-app">
 
 		<!-- preloader -->
-		<div class="mry-preloader mry-active">
+		<!-- <div class="mry-preloader mry-active">
 			<div class="mry-preloader-content">
 				<img class="mry-logo mry-mb-20 rotate" src="img/light/logo1.png" alt="Cuisinery">
 				<img class="mry-logo mry-mt-20" style="display: block; margin-left:60px; margin-bottom:30px;" src="img/light/LogoText (1).png" alt="Cuisinery">
@@ -695,11 +696,11 @@
 				</div>
 				<div class="mry-label">Please wait</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- preloader end -->
 
 		<!-- cursor -->
-		<div class="mry-magic-cursor">
+		<!-- <div class="mry-magic-cursor">
 			<div class="mry-ball">
 				<div class="mry-loader">
 					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 50 50"
@@ -710,7 +711,7 @@
 					</svg>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- cursor end -->
 
 		<!-- top panel -->
