--- a/index.html
+++ b/index.html
@@ -58,22 +58,7 @@
 	  
 	
 	<div class="floating-container">
-		<div class="floating-button">+</div>
-		<div class="element-container">
-	  
-		  <a href="google.com"> <span class="float-element tooltip-left">
-			<i class="material-icons">phone
-			</i></a>
-		  </span>
-			<span class="float-element open-popup" id="popup-email">
-			<i class="material-icons">email
-	  </i>
-		  </span>
-			<span class="float-element">
-			<i class="material-icons">chat</i>
-		  </span>
-		</div>
-	  </div>
+		<div class="floating-button"><img src="../cuisinery/img/light/whatsapp.svg"></div>
 	</div>
 
 	<div class="mry-app">
@@ -96,7 +81,6 @@
 			<header class="col-12 navbar navbar-responsive">
 				<div class="container navbar-container d-flex">
 				  <div class="brand js-target-scroll">
-					<span class="brand-logo-image"><img src="img/light/logo1.png" alt=""></span>
 					Cuisinery
 				  </div>
 		  
@@ -259,7 +243,6 @@
 				<time><img class="test1" src="img/light/timeline/concept-planing.png" alt="Project"> </time>
 				<div>
 					<h4>THE CONCEPT PLANNING</h4>
-					<!-- <p>THE CONCEPT PLANNING</p> -->
 				  </div>
 			</div>
 			
@@ -271,8 +254,6 @@
 
 			  <div>
 			  <h4>VALIDATING YOUR CONCEPT</h4>
-			  <!-- <p>THE PATH TO A PROFITABLE
-				RESTAURANT BUSINESS</p> -->
 			  </div>
 			</div>
 		  </li>
@@ -282,7 +263,6 @@
 				<time><img class="test1" src="img/light/timeline/design-delicious.png" alt="Project"> </time>
 			  <div>
 			  <h4>DESIGNING DELICIOUSNESS</h4>
-			  <!-- <p>MENU PLANNING AND KITCHEN SETUP</p> -->
 			</div>
 			</div>
 		  </li>
@@ -291,7 +271,6 @@
 				<time><img class="test1" src="img/light/timeline/building-team.png" alt="Project"> </time>
 			  <div>
 			  <h4>BUILDING A WINNING TEAM</h4>
-			  <!-- <p>STAFF HIRING AND TRAINING</p> -->
 			</div>
 			</div>
 		  </li>
@@ -300,7 +279,6 @@
 				<time><img class="test1" src="img/light/timeline/tren-study.png" alt="Project"> </time>
 			  <div>
 			  <h4> TREND STUDY</h4>
-			  <!-- <p>MAXIMIZING YOUR RESTAURANT'S POTENTIAL</p> -->
 			</div>
 			</div>
 		  </li>
@@ -309,7 +287,6 @@
 				<time><img class="test1 icon-animation" src="img/light/timeline/market-study.png" alt="Project"></time>
 			  <div>
 			  <h4> EXPERT F&B MARKET STUDY</h4>
-			  <!-- <p>UNDERSTANDING YOUR CUSTOMERS</p> -->
 			</div>
 			</div>
 		</li>
@@ -327,70 +304,7 @@
 		</div>
 
 	</div>
-	  <main class="works-view" data-aos="fade-up">
-		<div class = "card">
-		  <img src="img/light/works/restaurants.jpeg" alt="">
-		  <div class="card-content">
-			<h2 class="card-text-color hover-text">
-			  Restaurant Interiors
-			</h2>
-			<!-- <p class="card-description-color">
-				Intimate and cozy, our restaurant's interior design features warm lighting, rustic wooden furniture, and unique artwork that captures the essence of the local community.
-			</p> -->
-		  </div>
-		</div>
-		<div class = "card">
-			<img src="img/light/works/Kiosk.jpeg" alt="">
-			<div class="card-content">
-			  <h2 class="card-text-color">
-				Self-Service Kiosks
-			  </h2>
-			  <!-- <p class="card-description-color">
-				A self-service kiosk acts as a self-order POS system. Customers place and pay for their own orders at kiosks.
-			  </p> -->
-			</div>
-		  </div>
-		  <div class = "card">
-			<img src="img/light/works/restro-bars.jpg" alt="">
-			<div class="card-content">
-			  <h2 class="card-text-color">
-				Restro Bars
-			  </h2>
-			  <!-- <p class="card-description-color">
-				Elevate your dining experience with our stunning restro bar interiors. Sip on cocktails while surrounded by modern design, chic lighting, and a warm atmosphere.
-			  </p> -->
-			</div>
-		  </div>
-	  </main>
-	  <main class="works-view">
-		<div class = "card" data-aos="fade-up">
-		  <img src="img/light/works/BBQon wheels.jpeg">
-		  <div class="card-content">
-			<h2 class="card-text-color">
-			  BBQ on wheels
-			</h2>
-		  </div>
-		</div>
-		<div class = "card" data-aos="fade-up">
-			<img src="img/light/works/Commercial kitchen.jpeg" alt="">
-			<div class="card-content">
-			  <h2 class="card-text-color">
-			Commercial kitchen
-			  </h2>
-			</div>
-		  </div>
-		  <div class = "card" data-aos="fade-up">
-			<img src="img/light/works/cafeteria.jpeg" alt="">
-			<div class="card-content">
-			  <h2 class="card-text-color">
-				Cafeteria Designing
-			  </h2>
-			  <!-- <p class="card-description-color">
-				Our cafeteria boasts a modern and sleek design, with bright colors and comfortable seating arrangements for a welcoming atmosphere.
-			  </p> -->
-			</div>
-		  </div>
-	  </main>
+
 	  <ul class="honeycomb" lang="es">
 		<li class="honeycomb-cell" data-aos="fade-up">
 		  <img class="honeycomb-cell__image" src="img/light/works/cafeteria.jpeg">
@@ -410,11 +324,11 @@
 		</li>
 		<li class="honeycomb-cell" data-aos="fade-up">
 		  <img class="honeycomb-cell__image" src="img/light/services/commercial-kitchen.avif">
-		  <div class="honeycomb-cell__title">Commercial Kitchen<small>Setup</small></div>
+		  <div class="honeycomb-cell__title">Commercial Kitchen Setup </div>
 		</li>
 		<li class="honeycomb-cell" data-aos="fade-up">
 		  <img class="honeycomb-cell__image" src="img/light/services/hospitality.jpg">
-		  <div class="honeycomb-cell__title">Hospitality Concept <small>Creation</small></div>
+		  <div class="honeycomb-cell__title">Hospitality Concept Creation</div>
 		</li>
 		<li class="honeycomb-cell" data-aos="fade-up">
 		  <img class="honeycomb-cell__image" src="img/light/services/food truck.jpg">
@@ -426,11 +340,11 @@
 		  </li>
 		  <li class="honeycomb-cell" data-aos="fade-left">
 			<img class="honeycomb-cell__image" src="img/light/services/canteen.jpg">
-			<div class="honeycomb-cell__title">Canteen Project Consulting <small>Consulting</small></div>
+			<div class="honeycomb-cell__title">Canteen Project Consulting </div>
 		  </li>
 		  <li class="honeycomb-cell" data-aos="fade-right">
 			<img class="honeycomb-cell__image" src="img/light/services/business-ideas.jpg">>
-			<div class="honeycomb-cell__title">Hotel & Restaurant <small>Business Development Ideas</small></div>
+			<div class="honeycomb-cell__title">Hotel  Business Development Ideas </div>
 		  </li>
 		  <li class="honeycomb-cell" data-aos="fade-left">
 			<img class="honeycomb-cell__image" src="img/light/services/food-court.jpg">
@@ -536,6 +450,9 @@
 							<div class="slide">
 								<img src="img/light/Brand-logo/ravanavilas.png" height="100" width="250" alt="" />
 							</div>
+							<div class="slide">
+								<img src="img/light/Brand-logo/FOM-LOGO-175X70-01.png" height="100" width="250" alt="" />
+							</div>
 						</div>
 					</div>
 			
@@ -549,13 +466,6 @@
 							<div class="mry-subtitle">Our Ceo</div>
 						</div>
 						<h2 class="mry-fo header-text">Meet The Mastermind Behind Our Success</h2>
-						<!-- <div class="mry-arrows mry-fo">
-							<div class="mry-sl-nav">
-								<div class="mry-prev mry-button-team-prev mry-magnetic-link"><span class="mry-magnetic-object"><i class="fas fa-arrow-left"></i></span></div>
-								<div class="mry-next mry-button-team-next mry-magnetic-link"><span class="mry-magnetic-object"><i class="fas fa-arrow-right"></i></span></div>
-							</div>
-							<div class="mry-label mry-fo">Slider Navigation</div>
-						</div> -->
 					</div>
 
 				</div>
@@ -567,7 +477,7 @@
 
 								<div class="mry-team-member mry-text-center">
 									<div class="mry-member-photo-frame mry-fo">
-										<img src="img/light/team/arun.jpg" alt="Team member" >
+										<img class ="ceo-image" src="img/light/team/arun.jpg" alt="Team member" >
 										<div class="mry-photo-overlay"></div>
 										<div class="mry-curtain"></div>
 									</div>
@@ -579,32 +489,6 @@
 							<div class="swiper-slide1 ceo-about-text">
 									<p class="mry-text about-text mry-simple-text mry-fo">Mr. Arun is a global hospitality and restaurant consultant with over 24 years of experience in India, Europe, Africa, Asia, and the Middle East as well USA- living and breathing great hotel brands and contributing to some of the most respected hotel and restaurant groups worldwide. While based in Chennai India, we embrace working for clients with projects, missions, or challenges in the whole Country.</p>
 							</div>
-							<!-- <div class="swiper-slide">
-
-								<div class="mry-team-member mry-text-center">
-									<div class="mry-member-photo-frame mry-fo">
-										<img src="img/light/team/team-3.jpg" alt="Team member" >
-										<div class="mry-photo-overlay"></div>
-										<div class="mry-curtain"></div>
-									</div>
-									<h4 class="mry-mb-10 mry-fo">Mike Oldman</h4>
-									<p class="mry-text mry-simple-text mry-fo">UI/UX Designer</p>
-								</div>
-
-							</div>
-							<div class="swiper-slide">
-
-								<div class="mry-team-member mry-text-center">
-									<div class="mry-member-photo-frame mry-fo">
-										<img src="img/light/team/team-4.jpg" alt="Team member" >
-										<div class="mry-photo-overlay"></div>
-										<div class="mry-curtain"></div>
-									</div>
-									<h4 class="mry-mb-10 mry-fo">Emma Newman</h4>
-									<p class="mry-text mry-simple-text mry-fo">UI/UX Designer</p>
-								</div>
-
-							</div> -->
 						</div>
 					</div>
 
@@ -613,7 +497,7 @@
 
 					<div class="mry-main-title mry-title-center mry-p-0-40">
 						<div class="mry-numbering mry-fo">
-							<div class="mry-border-text">06</div>
+							<!-- <div class="mry-border-text">06</div> -->
 							<div class="mry-subtitle">Testimonials</div>
 						</div>
 						<h2 class="mry-fo">Our customers say</h2>
@@ -634,7 +518,7 @@
 							<div class="swiper-slide">
 
 								<div class="mry-title-center">
-									<img src="img/light/clients/c-1.jpg" alt="client" class="mry-reviewer mry-mb-20 mry-fo">
+									<img src="img/light/clients/USERS-01.png" alt="client" class="mry-reviewer mry-mb-20 mry-fo">
 									<h4 class="mry-mb-20 mry-fo">Arun Kannan</h4>
 									<div class="mry-subtitle mry-mb-20 mry-fo">Ravana Vilas</div>
 									<p class="mry-text mry-fo">"I had the pleasure of working with Mr. Arun as a consultant for my Beer Cafe, and I couldn't be happier with the results. His knowledge and experience in the industry were evident from the start and were able to provide valuable insights and recommendations that helped us to a streamlined operations and increase our revenue. Their attention to detail and dedication to our success made them an invaluable asset to our team. I highly recommend Cuisinery team, led by Mr.Arun!" </p>
@@ -651,7 +535,7 @@
 							<div class="swiper-slide">
 
 								<div class="mry-title-center">
-									<img src="img/light/clients/c-2.jpg" alt="client" class="mry-reviewer mry-mb-20 mry-fo">
+									<img src="img/light/clients/USERS-02.png" alt="client" class="mry-reviewer mry-mb-20 mry-fo">
 									<h4 class="mry-mb-20 mry-fo">Mr. Muthu Rathinam</h4>
 									<div class="mry-subtitle mry-mb-20 mry-fo">The Republik Beer Cafe</div>
 									<p class="mry-text mry-fo">"I had the pleasure of working with Mr. Arun as a consultant for my Beer Cafe, and I couldn't be happier with the results. His knowledge and experience in the industry were evident from the start and were able to provide valuable insights and recommendations that helped us to a streamlined operations and increase our revenue. Their attention to detail and dedication to our success made them an invaluable asset to our team. I highly recommend Cuisinery team, led by Mr.Arun!"</p>
@@ -668,7 +552,7 @@
 							<div class="swiper-slide">
 
 								<div class="mry-title-center">
-									<img src="img/light/clients/c-3.jpg" alt="client" class="mry-reviewer mry-mb-20 mry-fo">
+									<img src="img/light/clients/USERS-03.png" alt="client" class="mry-reviewer mry-mb-20 mry-fo">
 									<h4 class="mry-mb-20 mry-fo">Thilak</h4>
 									<div class="mry-subtitle mry-mb-20 mry-fo">Hotel Ajanta Sea View</div>
 									<p class="mry-text mry-fo">"We had the pleasure of working with the Cuisinery team to start our Hotel operations, and we couldn't be happier with the results. Their insights and recommendations helped us to create a unique menu, style of our service, and the additional revenure stream. They were always available to answer our questions and provide guidance, and their dedication to our success was truly remarkable. We highly recommend Mr. Arun to anyone looking to build their Hotel just with a vision!"</p>
@@ -685,7 +569,7 @@
 							<div class="swiper-slide">
 
 								<div class="mry-title-center">
-									<img src="img/light/clients/c-3.jpg" alt="client" class="mry-reviewer mry-mb-20 mry-fo">
+									<img src="img/light/clients/USERS-04.png" alt="client" class="mry-reviewer mry-mb-20 mry-fo">
 									<h4 class="mry-mb-20 mry-fo">Arun Kannan</h4>
 									<div class="mry-subtitle mry-mb-20 mry-fo"> Ravana Vilas</div>
 									<p class="mry-text mry-fo">I had a dream of starting a restaurant, but I had no idea where to start. That's when I reached out to Mr. Arun, and I'm so glad I did. He & his team were patient, knowledgeable, and incredibly supportive throughout the entire process. They helped me identify my target market, develop my menu, and create a business plan that would set me up for success. Their expertise and guidance were invaluable, and they gave me the confidence to pursue my dream. Thanks to Mr. Arun, my restaurant is thriving, and I couldn't be happier with the results. I highly recommend Mr. Arun to anyone who has a dream of starting a restaurant but doesn't know where to begin. They will be with you every step of the way and help you turn your dream into a reality.</p>
@@ -707,99 +591,61 @@
 		</div>
 	</div>
 	<div class="mry-app">
-
-		<!-- preloader -->
-		<!-- <div class="mry-preloader mry-active">
-			<div class="mry-preloader-content">
-				<img class="mry-logo mry-mb-20 rotate" src="img/light/logo1.png" alt="Cuisinery">
-				<img class="mry-logo mry-mt-20" style="display: block; margin-left:60px; margin-bottom:30px;" src="img/light/LogoText (1).png" alt="Cuisinery">
-				<div class="mry-loader-bar">
-					<div class="mry-loader"></div>
-				</div>
-				<div class="mry-label">Please wait</div>
-			</div>
-		</div> -->
-		<!-- preloader end -->
-
-		<!-- cursor -->
-		<!-- <div class="mry-magic-cursor">
-			<div class="mry-ball">
-				<div class="mry-loader">
-					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 50 50"
-						style="enable-background:new 0 0 50 50;" xml:space="preserve">
-						<path d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z">
-							<animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 25 25" to="360 25 25" dur="0.6s" repeatCount="indefinite" />
-						</path>
-					</svg>
-				</div>
-			</div>
-		</div> -->
-		<!-- cursor end -->
-
-		<!-- top panel -->
-		<!-- <div class="mry-top-panel">
-			<div class="mry-logo-frame">
-				<a href="index.html" class="mry-default-link mry-anima-link">
-					<img class="mry-logo" src="img/light/logo.svg" alt="Mireya">
-				</a>
-			</div>
-			<div class="mry-menu-button-frame">
-				<div class="mry-label">Menu</div>
-
-				<div class="mry-menu-btn mry-magnetic-link">
-					<div class="mry-burger mry-magnetic-object">
-						<span></span>
-					</div>
-				</div>
-			</div>
-		</div> -->
-		<!-- top panel end -->
-
-		<!-- menu -->
-		
-		<!-- menu end -->
-		<footer id="footer" class="footer footer-element">     
+		<footer id="footer" class="footer-1">
+			<div class="main-footer widgets-dark typo-light">
 			<div class="container">
-			  <div class="row-base row">
-				<div class="brand-info col-base col-sm-6 col-md-4">
-				  <a href="#top" class="brand js-target-scroll">
-					Cuisinery
-				  </a>
-				  <p style = "color: whitesmoke;">Transform Your Business with Expert Restaurant, Cafe, and Hotel Consulting.</p>
-				</div>
-	
-				<!-- <div class="col-contacts col-base col-sm-6 col-md-4 col-md-offset-1">
-				  <a href="tel:88005553535" class="phone">+8 800 555 35 35</a><br>
-				  <a href="mailto:info@Archiko.com" class="email">info@Archiko.com</a>
-				</div>
-				<div class="col-subscribe col-base col-sm-6 col-md-3">
-				  <div class="subscribe-title">Subscribe to our newsletter</div>
-				  <form class="subscribe-form js-subscribe-form">
-					<div class="input-group">
-					  <input id="mc-email" type="email" class="input-round form-control" placeholder="Email">
-					  <span class="input-group-btn">
-						<button class="btn btn-dark" type="submit"><span class="arrow-right"></span></button>
-					  </span>
-					</div>
-					<label class="mc-label" for="mc-email" id="mc-notification"></label>
-				  </form>
-				</div> -->
-			  </div>
+			<div class="row">
+			
+			  <div class="col-xs-12 col-sm-6 col-md-3">
+			<div class="widget subscribe no-box">
+			<h5 class="widget-title" style="font-size:3em;">Cuisinery<span></span></h5>
+			<p>Transform Your Business with Expert Restaurant, Cafe, and Hotel Consulting
+			</p>
 			</div>
-			<div class="footer-bottom">
-			  <div class="container">
-				  <div class="copyrights">
-				  © Copyright 2023 Cuisinery. All Rights Reserved
-				  </div>
-				  <ul class="social-list">
-					<li><a href="#" class="fa fa-facebook"></a></li>
-					<li><a href="#" class="fa fa-twitter"></a></li>
-					<li><a href="#" class="fa fa-linkedin"></a></li>
-					<li><a href="#" class="fa fa-instagram"></a></li>
-				  </ul>  
-			  </div>
+		</div>  
+			<div class="col-xs-12 col-sm-6 col-md-3">
+			<div class="widget no-box footer-mobile-view" style="margin-left: 25%;">
+			<h5 class="widget-title">Quick Links<span></span></h5>
+			<ul class="thumbnail-widget">
+				<li><div><a href="#home">Home</a></div></li>
+				<li><div ><a href="#concepts">Concepts</a></div></li>
+				<li><div ><a href="#whywe">Services</a></div</li>
+				<li><div><a href="#works">Works</a></div></li>
+				<li><div><a href="#team">Team</a></div></li>
+				<li><div><a href="#clients">Clients</a></div></li>
+			</ul>
 			</div>
-		  </footer>
+			</div>
+			  <div class="col-xs-12 col-sm-6 col-md-3">
+			<div class="widget no-box">
+			<h5 class="widget-title">Follow up<span></span></h5>
+			<a href="#"> <img src="../cuisinery/img/light/fb-final.svg"> </a>
+			<a href="https://wa.me/919600034293?text=Hi"> <img src="../cuisinery/img/light/whatsapp.svg"> </a>
+			<a href="#"> <img src="../cuisinery/img/light/icons8-twitter-circled.svg"> </a>
+			</div>
+			</div>
+			<!-- <br><br> -->
+			<div class="col-xs-12 col-sm-6 col-md-3">
+			<div class="widget no-box">
+			<h5 class="widget-title">Contact Us<span></span></h5>
+			<div class="d-flex"><img class = "contact-icon" src="../cuisinery/img/light/phone-5981.svg"><p> +91 96000 34293 </p> </div>
+			<div class="d-flex"><img class = "contact-icon" src="../cuisinery/img/light/icons8-google-maps.svg"><p>Adyar, Chennai, TamilNadu.</p> </div>
+			</div>
+			
+			</div>
+			</div>
+			</div>
+			  
+			<div class="footer-copyright">
+			<div class="container">
+			<div class="row">
+			<div class="col-md-12 text-center">
+			<p>Copyright Cuisinery © 2023. All rights reserved.</p>
+			</div>
+			</div>
+			</div>
+			</div>
+		</footer>
 		</div>
 	
 
@@ -830,6 +676,9 @@
 	<script src="js/plugins/canvas.js"></script>
 	<!-- parsley js -->
 	<script src="js/plugins/parsley.min.js"></script>	
+	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css'>
+		  <link href='//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css' rel='stylesheet'/>
 	
 	<!-- main js -->
 	<script src="js/main.js"></script>
