--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	  
 	
 	<div class="floating-container">
-		<div class="floating-button"><img src="../cuisinery/img/light/whatsapp.svg"></div>
+		<div class="floating-button"><a href="https://wa.me/919600034293?text=Hi"><img src="../cuisinery/img/light/icons8-whatsapp-logo-48.png"></a></div>
 	</div>
 
 	<div class="mry-app">
@@ -340,7 +340,7 @@
 		  </li>
 		  <li class="honeycomb-cell" data-aos="fade-left">
 			<img class="honeycomb-cell__image" src="img/light/services/canteen.jpg">
-			<div class="honeycomb-cell__title">Canteen Project Consulting </div>
+			<div class="honeycomb-cell__title">Canteen <br> Project Consulting </div>
 		  </li>
 		  <li class="honeycomb-cell" data-aos="fade-right">
 			<img class="honeycomb-cell__image" src="img/light/services/business-ideas.jpg">>
@@ -619,17 +619,17 @@
 			  <div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="widget no-box">
 			<h5 class="widget-title">Follow up<span></span></h5>
-			<a href="#"> <img src="../cuisinery/img/light/fb-final.svg"> </a>
-			<a href="https://wa.me/919600034293?text=Hi"> <img src="../cuisinery/img/light/whatsapp.svg"> </a>
-			<a href="#"> <img src="../cuisinery/img/light/icons8-twitter-circled.svg"> </a>
+			<a href="#"> <img class="contact-icon" src="../cuisinery/img/light/icons8-facebook-48.png"> </a>
+			<a href="https://wa.me/919600034293?text=Hi"> <img class="contact-icon" src="../cuisinery/img/light/icons8-whatsapp-logo-48.png"> </a>
+			<a href="#"> <img class="contact-icon" src="../cuisinery/img/light/icons8-instagram-48 (1).png"> </a>
 			</div>
 			</div>
 			<!-- <br><br> -->
 			<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="widget no-box">
 			<h5 class="widget-title">Contact Us<span></span></h5>
-			<div class="d-flex"><img class = "contact-icon" src="../cuisinery/img/light/phone-5981.svg"><p> +91 96000 34293 </p> </div>
-			<div class="d-flex"><img class = "contact-icon" src="../cuisinery/img/light/icons8-google-maps.svg"><p>Adyar, Chennai, TamilNadu.</p> </div>
+			<div class="d-flex"><img class = "contact-icon" src="../cuisinery/img/light/phone-5981.png"><p>&nbsp; +91 96000 34293 </p> </div>
+			<div class="d-flex"><img class = "contact-icon" src="../cuisinery/img/light/icons8-google-maps-48.png"><p> &nbsp; Adyar, Chennai, TamilNadu.</p> </div>
 			</div>
 			
 			</div>
