image issues fixed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	  
 	
 	<div class="floating-container">
-		<div class="floating-button"><a href="https://wa.me/919600034293?text=Hi"><img src="../cuisinery/img/light/icons8-whatsapp-logo-48.png"></a></div>
+		<div class="floating-button"><a href="https://wa.me/919600034293?text=Hi"><img src="/img/light/icons8-whatsapp-logo-48.png"></a></div>
 	</div>
 
 	<div class="mry-app">
@@ -619,17 +619,17 @@
 			  <div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="widget no-box">
 			<h5 class="widget-title">Follow up<span></span></h5>
-			<a href="#"> <img class="contact-icon" src="../cuisinery/img/light/icons8-facebook-48.png"> </a>
-			<a href="https://wa.me/919600034293?text=Hi"> <img class="contact-icon" src="../cuisinery/img/light/icons8-whatsapp-logo-48.png"> </a>
-			<a href="#"> <img class="contact-icon" src="../cuisinery/img/light/icons8-instagram-48 (1).png"> </a>
+			<a href="#"> <img class="contact-icon" src="/img/light/icons8-facebook-48.png"> </a>
+			<a href="https://wa.me/919600034293?text=Hi"> <img class="contact-icon" src="/img/light/icons8-whatsapp-logo-48.png"> </a>
+			<a href="#"> <img class="contact-icon" src="/img/light/icons8-instagram-48 (1).png"> </a>
 			</div>
 			</div>
 			<!-- <br><br> -->
 			<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="widget no-box">
 			<h5 class="widget-title">Contact Us<span></span></h5>
-			<div class="d-flex"><img class = "contact-icon" src="../cuisinery/img/light/phone-5981.png"><p>&nbsp; +91 96000 34293 </p> </div>
-			<div class="d-flex"><img class = "contact-icon" src="../cuisinery/img/light/icons8-google-maps-48.png"><p> &nbsp; Adyar, Chennai, TamilNadu.</p> </div>
+			<div class="d-flex"><img class = "contact-icon" src="/img/light/phone-5981.png"><p>&nbsp; +91 96000 34293 </p> </div>
+			<div class="d-flex"><img class = "contact-icon" src="/img/light/icons8-google-maps-48.png"><p> &nbsp; Adyar, Chennai, TamilNadu.</p> </div>
 			</div>
 			
 			</div>
