image issues fixed

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 												<!-- <div class="mry-subtitle mry-mb-20"></div> -->
 												<h1 class="mry-mb-30 text-color corosuel-header">Cafteria<br><span class="mry-border-text text-color">Planning</span><span class="mry-animation-el"></span></h1>
 												<!-- <div class="mry-text mry-mb-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>Adipisci distinctio iure, rerum non fugit.</div> -->
-												<a class="mry-btn mry-default-link mry-anima-link text-color get-qoute-color" href="project.html">Get Qoute</a>
+												<a class="mry-btn mry-default-link mry-anima-link text-color get-qoute-color" href="project.html">Get Quote</a>
 												<!-- <a class="mry-btn-text mry-default-link mry-anima-link" href="portfolio-grid-1.html">All Projects</a> -->
 											</div>
 										</div>
@@ -199,7 +199,7 @@
 												<!-- <div class="mry-subtitle mry-mb-20">slide 3</div> -->
 												<h1 class="mry-mb-30 text-color corosuel-header">Restro Bars<br><span class="mry-border-text text-color">Country house</span><span class="mry-animation-el"></span></h1>
 												<!-- <div class="mry-text mry-mb-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>Adipisci distinctio iure, rerum non fugit.</div> -->
-												<a class="mry-btn mry-default-link mry-anima-link text-color get-qoute-color" href="project.html">Get Qoute</a>
+												<a class="mry-btn mry-default-link mry-anima-link text-color get-qoute-color" href="project.html">Get Quote</a>
 												<!-- <a class="mry-btn-text mry-default-link mry-anima-link" href="portfolio-grid-1.html">All Projects</a> -->
 											</div>
 										</div>
