new changes for logo

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<header class="col-12 navbar navbar-responsive">
 				<div class="container navbar-container d-flex">
 				  <div class="brand js-target-scroll">
-					<img class="logo-style"src="img/light/cusinery-logo.png" alt="Cuisinery">
+					<img class="logo-style"src="img/light/final-logo.png" alt="Cuisinery">
 				  </div>
 		  
 				  <!-- Navigation Desctop -->
@@ -598,7 +598,7 @@
 			
 			  <div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="widget subscribe no-box">
-			<h5 class="widget-title" style="font-size:3em;"><img class="logo-style"src="img/light/cusinery-logo.png" alt="Cuisinery"><span></span></h5>
+			<h5 class="widget-title" style="font-size:3em;"><img class="logo-style"src="img/light/final-logo.png" alt="Cuisinery"><span></span></h5>
 			<p>Transform Your Business with Expert Restaurant, Cafe, and Hotel Consulting
 			</p>
 			</div>
